--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,8 @@ export(get_body_part_names)
 export(get_collection_names)
 export(get_manufacturer_names)
 export(get_modality_names)
-export(get_patient_ids)
+export(get_new_patients_in_collection)
+export(get_new_studies_in_collection)
+export(get_patients)
 export(get_patients_by_modality)
+export(get_studies_in_collection)
