--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(get_manufacturer_names)
 export(get_modality_names)
 export(get_new_patients_in_collection)
 export(get_new_studies_in_collection)
+export(get_patient_studies)
 export(get_patients)
 export(get_patients_by_modality)
+export(get_series)
 export(get_studies_in_collection)
