get series size

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,5 @@ export(get_patient_studies)
 export(get_patients)
 export(get_patients_by_modality)
 export(get_series)
+export(get_series_size)
 export(get_studies_in_collection)
