last functions, documentation, and readme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,12 @@ export(get_manufacturer_names)
 export(get_modality_names)
 export(get_new_patients_in_collection)
 export(get_new_studies_in_collection)
+export(get_patient_info)
 export(get_patient_studies)
-export(get_patients)
 export(get_patients_by_modality)
-export(get_series)
+export(get_series_info)
 export(get_series_size)
+export(get_sop_instance_uids)
 export(get_studies_in_collection)
+export(save_image_series)
+export(save_single_image)
