--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TCIApathfinder
 Title: Client for the Cancer Imaging Archive REST API
-Version: 1.0.0
+Version: 1.0.1
 Authors@R: person("Pamela", "Russell", email = "pamela.russell@ucdenver.edu", role = c("aut", "cre"))
 Description: A wrapper for The Cancer Imaging Archive's REST API. The Cancer
     Imaging Archive (TCIA) hosts de-identified medical images of cancer
@@ -15,3 +15,8 @@ Encoding: UTF-8
 LazyData: true
 Imports: testthat, httr, jsonlite
 RoxygenNote: 6.0.1
+Suggests: knitr,
+    rmarkdown,
+    oro.dicom,
+    radiomics
+VignetteBuilder: knitr
