--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(get_series_info)
 export(get_series_size)
 export(get_sop_instance_uids)
 export(get_studies_in_collection)
+export(read_tcia)
 export(save_extracted_image_series)
 export(save_image_series)
 export(save_single_image)
