--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Encoding: UTF-8
 LazyData: true
 Imports: httr, jsonlite
 BugReports: https://github.com/pamelarussell/TCIApathfinder/issues
-RoxygenNote: 6.1.1
+URL: https://github.com/pamelarussell/TCIApathfinder
+RoxygenNote: 7.1.1
 Suggests: knitr,
     rmarkdown,
     oro.dicom,
